--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-pino-logger": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.18",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.6"
   },
   "devDependencies": {
     "twilio": "^3.56.0"
